--- a/src/index.css
+++ b/src/index.css
@@ -6,92 +6,14 @@
 @theme {
   --font-anonymous-pro: "Anonymous Pro", monospace;
 }
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Anonymous Pro', monospace;
-}
 
-header {
-  background: white;
+@layer base {
+  a {
+    @apply text-black underline decoration-[#ff0000]
+           visited:text-[#ff0000] visited:decoration-black
+           hover:no-underline
+           dark:text-white dark:decoration-[#ff0000]
+           dark:visited:text-[#809fff] dark:visited:decoration-white
+           dark:hover:no-underline;
+  }
 }
-
-.dark header {
-  background: rgb(32, 33, 36);
-}
-
-body {
-  color: black;
-  background: white;
-  margin: 0;
-  min-height: 100vh;
-}
-
-.dark body {
-  color: #eee;
-  background: rgb(32, 33, 36);
-}
-
-a {
-  color: black;
-  text-decoration-color: #ff0000;
-}
-
-a:visited {
-  color: #ff0000;
-  text-decoration-color: black;
-}
-
-a:hover {
-  color: black;
-  text-decoration: none;
-}
-
-.dark a {
-  color: white;
-  text-decoration-color: #ff0000;
-}
-
-.dark a:visited {
-  color: #809fff;
-  text-decoration-color: white;
-}
-
-.dark a:hover {
-  color: white;
-  text-decoration: none;
-}
-
-header a.header-title {
-  text-decoration: none;
-  color: black;
-}
-
-header a.header-title:visited,
-header a.header-title:hover,
-header a.header-title:active,
-header a.header-title:focus {
-  text-decoration: none;
-  color: black;
-}
-
-header a.header-title h1 {
-  color: black;
-  text-decoration: none;
-}
-
-.dark header a.header-title {
-  color: #eee;
-}
-
-.dark header a.header-title:visited,
-.dark header a.header-title:hover,
-.dark header a.header-title:active,
-.dark header a.header-title:focus {
-  color: #eee;
-}
-
-.dark header a.header-title h1 {
-  color: #eee;
-} */
